--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"@gridsome/source-filesystem": "^0.3.0",
 		"@gridsome/transformer-remark": "^0.2.0",
+		"animejs": "^3.0.1",
 		"basscss": "^8.0.3",
 		"basscss-addons": "^1.0.0",
 		"basscss-basic": "^1.0.0",
