--- a/src/data/Home.yml
+++ b/src/data/Home.yml
@@ -4,19 +4,19 @@ metaKeywords: >-
 metaDescription: >-
   Coming soon...
 services:
-  - title: Apps + PWAs
+  - title: Sexy Mobile Apps
     description: >-
-      We create amazing experiences for iOS, Android and Responsive Web. Front-end to back-end development, we do it all. With our user-first approach and API-driven architecture, we create apps that can evolve to take advantage of new capabilities.
+      With our user-first approach and API-driven architecture, we create apps that allow you to take advantage of new capabilities. We create amazing app experiences for iOS and Android.
     link: /services-apps
     linkText: Learn More
-  - title: Custom Software
+  - title: Slick Software
     description: >-
-      Custom software serves the unique processes of your business, solves your specific problems, satisfies your exclusive needs and makes your workflows easier, faster, and more efficient. Our team of versatile custom software developers can architect & develop software for even the most complex business logic & workflow.
+      Custom software serves the unique processes of your business, solves your specific problems, satisfies your exclusive needs and makes your workflows easier, faster, and more efficient.
     link: /services-custom-software
     linkText: Learn More
-  - title: Web Design
+  - title: Candy Websites
     description: >-
-      We collaborate with our clients to deliver a professionally designed accelerated mobile website, integrated with high conversion landing pages and the client company’s branding. Our talent comes the Victoria community, all of whom are passionate about building products optimized for both desktop and mobile utilization.
+      Professionally designed accelerated mobile websites, integrated with high conversion landing pages and the client company’s branding optimized for both desktop and mobile utilization.
     link: /services-web
     linkText: Learn More
   - title: Advertising
