A bunch of tweaks.

--- a/src/data/Hero.yml
+++ b/src/data/Hero.yml
@@ -32,4 +32,4 @@ items:
     image: /images/banners/responsive-banner-jimmy-poblanos.png
     link: /company
     linkText: Meet Our Team
-    title: We've Got Your Back
+    title: Saddle up, Partner!
