--- a/src/data/Home.yml
+++ b/src/data/Home.yml
@@ -9,14 +9,14 @@ services:
       With our user-first approach and API-driven architecture, we create apps that allow you to take advantage of new capabilities. We create amazing app experiences for iOS and Android.
     link: /services-apps
     linkText: Learn More
-  - title: Slick Software
+  - title: Bulletproof Software
     description: >-
       Custom software serves the unique processes of your business, solves your specific problems, satisfies your exclusive needs and makes your workflows easier, faster, and more efficient.
     link: /services-custom-software
     linkText: Learn More
-  - title: Candy Websites
+  - title: Websites You Could Eat
     description: >-
-      Professionally designed accelerated mobile websites, integrated with high conversion landing pages and the client company’s branding optimized for both desktop and mobile utilization.
+      Professionally designed accelerated mobile websites, integrated with high conversion landing pages and the client company’s branding optimized for both desktop and mobile.
     link: /services-web
     linkText: Learn More
   - title: Advertising
