--- a/src/data/Pricing.yml
+++ b/src/data/Pricing.yml
@@ -12,7 +12,7 @@ services:
     linkText: Learn More
   - title: Web Design
     description: >-
-      We collaborate with our clients to deliver a professionally designed accelerated mobile website, integrated with high conversion landing pages and the client company’s branding. Our talent comes the Victoria community, all of whom are passionate about building products optimized for both desktop and mobile utilization.
+      We collaborate with our clients to deliver a professionally designed accelerated mobile website, integrated with high conversion landing pages and the client company’s branding. Our talent comes the Victoria community, all of whom are passionate about building products optimized for both desktop and mobile.
     link: /services-web
     linkText: Learn More
   - title: Advertising
