--- a/src/data/Hero.yml
+++ b/src/data/Hero.yml
@@ -22,7 +22,7 @@ items:
     # image: /images/portfolio/bc-showcase-app-quickcommerce.png
     link: /services
     linkText: Learn More
-    title: We make your wildest application dreams come true!
+    title: Make your wildest dreams come true!
   - description: >-
       At Blue Collar, you're not our customers - **you're our partners.**
       We know that the dynamics of the rapidly changing Information Age can be
