--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"basscss-type-scale": "^1.0.6",
 		"basscss-typography": "^3.0.4",
 		"gridsome": "^0.5.0",
+		"gsap": "^2.1.3",
 		"lozad": "^1.9.0",
 		"marked": "^0.6.2",
 		"node-sass": "^4.11.0",
