--- a/src/data/Testimonial.yml
+++ b/src/data/Testimonial.yml
@@ -5,7 +5,7 @@ items:
       "The people at Blue Collar just really want to make sure that their customers are satisfied. I'm looking forward to working with Blue Collar again on future projects."
     reviewedBy: Leigh W.
     position: President
-    organization: Phase 3 Development, Inc.
+    organization: Phase 3 Dev, Inc.
     link: ""
     linkText: ""
     image: /images/testimonials/phase3.leigh-w.jpg
