--- a/src/data/Home.yml
+++ b/src/data/Home.yml
@@ -14,7 +14,7 @@ services:
       Custom software serves the unique processes of your business, solves your specific problems, satisfies your exclusive needs and makes your workflows easier, faster, and more efficient.
     link: /services-custom-software
     linkText: Learn More
-  - title: Websites You Could Eat
+  - title: Sites You Could Eat
     description: >-
       Professionally designed accelerated mobile websites, integrated with high conversion landing pages and the client company’s branding optimized for both desktop and mobile.
     link: /services-web
