--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"rework-loader": "^0.1.1",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
-		"vue-markdown": "^2.2.4"
+		"vue-markdown": "^2.2.4",
+		"vue2-google-maps": "^0.10.7"
 	},
 	"devDependencies": {
 		"@babel/runtime": "^7.4.3"
