--- a/src/data/Testimonial.yml
+++ b/src/data/Testimonial.yml
@@ -14,7 +14,7 @@ items:
       "Working with Blue Collar was a positive experience. Their work was of high standard and their high availabilty made working with them across timezones easy."
     reviewedBy: Dirk S.
     position: Enterprise Architect
-    organization: Visma / Active24
+    organization: Active24
     link: ""
     linkText: ""
     image: /images/testimonials/active24.dirk-s.jpg
