--- a/src/data/Home.yml
+++ b/src/data/Home.yml
@@ -6,17 +6,17 @@ metaDescription: >-
 services:
   - title: Sexy Mobile Apps
     description: >-
-      With our user-first approach and API-driven architecture, we create apps that allow you to take advantage of new capabilities. We create amazing app experiences for iOS and Android.
+      Our timeless look and feel will drive your customers wild with desire.
     link: /services-apps
     linkText: Learn More
   - title: Bulletproof Software
     description: >-
-      Custom software serves the unique processes of your business, solves your specific problems, satisfies your exclusive needs and makes your workflows easier, faster, and more efficient.
+      We're Kevlar Vests for ideas. Feature creep, maintenance costs and bad actors will try to shoot you down. We'll stop those bullets so you don't have to.
     link: /services-custom-software
     linkText: Learn More
   - title: Sites You Could Eat
     description: >-
-      Professionally designed accelerated mobile websites, integrated with high conversion landing pages and the client company’s branding optimized for both desktop and mobile.
+      Our Red Seal software chefs will blow your mind with great plates and great tastes.
     link: /services-web
     linkText: Learn More
   - title: Advertising
