--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
 		"vue-markdown": "^2.2.4",
+		"vue-waypoint": "^3.2.2",
 		"vue2-google-maps": "^0.10.7"
 	},
 	"devDependencies": {
