--- a/src/data/Home.yml
+++ b/src/data/Home.yml
@@ -14,7 +14,7 @@ services:
       We're Kevlar Vests for ideas. Feature creep, maintenance costs and bad actors will try to shoot you down. We'll stop those bullets so you don't have to.
     link: /services-custom-software
     linkText: Learn More
-  - title: Sites You Could Eat
+  - title: Websites You Could Eat
     description: >-
       Our Red Seal software chefs will blow your mind with great plates and great tastes.
     link: /services-web
