--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"basscss-sass": "^4.0.0",
 		"basscss-type-scale": "^1.0.6",
 		"basscss-typography": "^3.0.4",
-		"gridsome": "^0.5.0",
+		"gridsome": "^0.6.5",
 		"gsap": "^2.1.3",
 		"lozad": "^1.9.0",
 		"marked": "^0.6.2",
@@ -28,7 +28,7 @@
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
 		"vue-markdown": "^2.2.4",
-		"vue-waypoint": "https://github.com/bluecollardev/vue-waypoint.git#dev/server-rendering-fixes",
+		"vue-waypoint": "https://github.com/bluecollardev/vue-waypoint.git",
 		"vue2-google-maps": "^0.10.7"
 	},
 	"devDependencies": {
