--- a/src/data/Home.yml
+++ b/src/data/Home.yml
@@ -6,18 +6,18 @@ metaDescription: >-
 services:
   - title: Sexy Mobile Apps
     description: >-
-      Our timeless look and feel will drive your customers wild with desire.
-    link: '/#contact'
+      Our timeless look and feel and sleek experience will drive your customers wild with desire.
+    link: '/contact'
     linkText: Get Started
   - title: Bulletproof Software
     description: >-
-      We're Kevlar Vests for ideas. Feature creep, maintenance costs and bad actors will try to shoot you down. We'll stop those bullets so you don't have to.
-    link: '/#contact'
+      We're Kevlar Vests for ideas. Feature creep, maintenance, and bad actors will try to shoot you down. We stop those bullets so you don't have to.
+    link: '/contact'
     linkText: Get Started
   - title: Delicious Websites
     description: >-
       Our Red Seal software chefs will blow your mind with great plates and great tastes.
-    link: '/#contact'
+    link: '/contact'
     linkText: Get Started
   #- title: SEO / SEM
   #  description: >-
