--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
 		"rework-loader": "^0.1.1",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
+		"vue-browser-detect-plugin": "^0.1.5",
 		"vue-markdown": "^2.2.4",
 		"vue-waypoint": "https://github.com/bluecollardev/vue-waypoint.git",
 		"vue2-google-maps": "^0.10.7"
 	},
 	"devDependencies": {
-		"@babel/runtime": "^7.4.3"
+		"@babel/runtime": "^7.4.3",
+		"sockjs-client": "^1.3.0"
 	},
 	"license": "MIT"
 }
