--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"rework-loader": "^0.1.1",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
+		"svg.js": "^2.7.1",
+		"svg.path.js": "^0.6.2",
 		"vue-browser-detect-plugin": "^0.1.5",
 		"vue-markdown": "^2.2.4",
 		"vue-waypoint": "https://github.com/bluecollardev/vue-waypoint.git",
