Try to fix SSR issue with SVG.js.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"basscss-sass": "^4.0.0",
 		"basscss-type-scale": "^1.0.6",
 		"basscss-typography": "^3.0.4",
+		"fs": "^0.0.1-security",
 		"gridsome": "^0.6.5",
 		"gsap": "^2.1.3",
 		"lozad": "^1.9.0",
@@ -30,6 +31,7 @@
 		"svg.js": "^2.7.1",
 		"svg.path.js": "^0.6.2",
 		"svg.pathmorphing.js": "^0.1.3",
+		"svgdom": "^0.0.20",
 		"vue-browser-detect-plugin": "^0.1.5",
 		"vue-markdown": "^2.2.4",
 		"vue-waypoint": "https://github.com/bluecollardev/vue-waypoint.git",
