--- a/src/data/Home.yml
+++ b/src/data/Home.yml
@@ -7,17 +7,17 @@ services:
   - title: Sexy Mobile Apps
     description: >-
       Our timeless look and feel and sleek experience will drive your customers wild with desire.
-    link: '/contact'
+    link: '/#contact'
     linkText: Get Started
   - title: Bulletproof Software
     description: >-
       We're Kevlar Vests for ideas. Feature creep, maintenance, and bad actors will try to shoot you down. We stop those bullets so you don't have to.
-    link: '/contact'
+    link: '/#contact'
     linkText: Get Started
   - title: Delicious Websites
     description: >-
       Our Red Seal software chefs will blow your mind with great plates and great tastes.
-    link: '/contact'
+    link: '/#contact'
     linkText: Get Started
   #- title: SEO / SEM
   #  description: >-
