--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
 	"devDependencies": {
 		"@rollup/plugin-yaml": "^4.1.2",
 		"@vitejs/plugin-vue": "^5.0.5",
+		"@vue/devtools": "^8.0.3",
 		"sass": "^1.77.2",
-		"vite": "^5.2.12"
+		"vite": "^5.2.12",
+		"vite-plugin-vue-devtools": "^7.7.7"
 	},
 	"license": "MIT"
 }
