--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"svg.pathmorphing.js": "^0.1.3",
 		"svgdom": "^0.1.19",
 		"vue": "^3.4.27",
+		"vue-i18n": "^9.14.5",
 		"vue-router": "^4.3.2"
 	},
 	"devDependencies": {
